--- a/hw2/hw2.html
+++ b/hw2/hw2.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Homework 2</h1>
     <img src= "PNGs/hw.png" width=512px height=362px alt="">
+    <a href="https://github.com/ebrock12/geo370/blob/main/Data/House.geojson">GeoJSON Link</a>
+    <a href="https://www.gastongov.com/776/Documents-Shapefiles">Vector Link</a>
+    <a href="https://nconemap.maps.arcgis.com/apps/webappviewer/index.html?id=2c8a9b366c4841f1be2b464347d04a2b">Raster Link</a>
 </body>
 </html>
