--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to Emma's GEOG370 Page!</h1>
     <a href="./hw2/hw2.html"><h2>Homework 2</h2></a>
+    <a href="./hw3/Worldprojections/Worldprojections/worldprojections.html"><h2>Homework 3</h2></a>
 </body>
 </html>
