--- a/hw4/geo_unc_hw4.html
+++ b/hw4/geo_unc_hw4.html
@@ -24,6 +24,9 @@
   </style>
 </head>
 <body>
+  <div>
+    <img src="" alt="">
+  </div>
   <div id="map"></div>
   <script>
       var map = L.map('map', { attributionControl: false } ).setView([35.90482342972204, -79.05011847680815], 14.0);
