--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Welcome to Emma's GEOG370 Page!</h1>
     <a href="./hw2/hw2.html"><h2>Homework 2</h2></a>
     <a href="./hw3/Worldprojections/Worldprojections/worldprojections.html"><h2>Homework 3</h2></a>
-    <a href="./hw4/geo_unc_hw4.html"><h2>Homework 4</h2></a>
+    <a href="./hw4/hw.html"><h2>Homework 4</h2></a>
 </body>
 </html>
