--- a/hw5/hweden.html
+++ b/hw5/hweden.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Homework 5</h1>
-    <h2>What's up! Thanks for checking out my HW5 page. I made this amazing tile of my mom's hometown in Eden, NY. My grandma recently sold her house, so I haven't been back in awhile, but it's a place of very fond memory for me. See if you can find the baseball field we used to play!</h2>
+    <h2>What's up! Thanks for checking out my HW5 page. I made this amazing tile of my mom's hometown in Eden, NY. My grandma recently sold her house, so I haven't been back in awhile, but it's a place of very fond memory for me. See if you can find the baseball field we used to play at!</h2>
     <a href="./eden.html">Georeference Tile</a> 
     <a href="./eden_points_real.points.txt">Control Points</a>
 </body>
