--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="./hw3/Worldprojections/Worldprojections/worldprojections.html"><h2>Homework 3</h2></a>
     <a href="./hw4/hw.html"><h2>Homework 4</h2></a>
     <a href="./hw5/hweden.html"><h2>Homework 5</h2></a>
+    <a href="./exam1/exam.html"><h2>Exam 1</h2></a>
 </body>
 </html>
