--- a/exam1/exam.html
+++ b/exam1/exam.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Exam 1</h1>
     <h2> Welcome to my Exam 1 Page! Contents of this page include: PNG image of the Boston Logan Airport, digitized GeoJSON points/polygons, and control points!</h2>
-    <img src= "Exam1.png" width=512px height=362px alt="">
+    <img src= "Exam1.png" width=512px height=362px alt=""/>
     <a href="./exampoints/exam1pointsreal.points.txt"> Control Points </a> 
     <a href="https://github.com/ebrock12/geo370/tree/main/exam1/GEOJSONS">GeoJSONs</a>
 </body>
