--- a/hw6/hw6_template.html
+++ b/hw6/hw6_template.html
@@ -18,7 +18,7 @@
 <h2>Data used for this project</h2>
     <a href="./BA_NY_Data.csv"> CSV dataset </a>
     <p></p>
-    <a href="./NewYorkCounties.geojson"> Link to shapefile </a>
+    <a href="https://github.com/ebrock12/geo370/blob/main/hw6/NewYorkCounties.geojson"> Link to shapefile </a>
 
 </body>
 </html>
