--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="./hw5/hweden.html"><h2>Homework 5</h2></a>
     <a href="./exam1/exam.html"><h2>Exam 1</h2></a>
     <a href="./hw6/hw6_template.html"><h2>Homework 6</h2></a>
+    <a href="./hw6pt2/v2.html"><h2>Homework 6 pt.2</h2></a>
 </body>
 </html>
