--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="./exam1/exam.html"><h2>Exam 1</h2></a>
     <a href="./hw6/hw6_template.html"><h2>Homework 6</h2></a>
     <a href="./hw6pt2/v2.html"><h2>Homework 6 pt.2</h2></a>
+    <a href="./hw7/hw7.html"><h2>Homework 7</h2></a>
 </body>
 </html>
