--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -17,5 +17,7 @@
     <a href="./hatecrimecsv.csv"> CSV dataset </a>
     <p></p>
     <a href=> Link to shapefile </a>
+    <p></p>
+    <a href="https://data.ny.gov/Public-Safety/Hate-Crimes-by-County-and-Bias-Type-Beginning-2010/6xda-q7ev"> Link to original data </a>
 </body>
 </html>
