--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -16,7 +16,7 @@
             <h2>Data used for this project</h2>
     <a href="./hatecrimecsv.csv"> CSV dataset </a>
     <p></p>
-    <a href=> Link to shapefile </a>
+    <a href="https://github.com/ebrock12/geo370/blob/main/hw7/NewYorkCounties.geojson"> Link to shapefile </a>
     <p></p>
     <a href="https://data.ny.gov/Public-Safety/Hate-Crimes-by-County-and-Bias-Type-Beginning-2010/6xda-q7ev"> Link to original data </a>
 </body>
